Improvements in up-to-date checking and use of parallel tests where possible.